[package]
name = "taskbook"
version = "0.1.0"
authors = ["Jeriel Baptista Verissimo <jeriel@ciandt.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
colored = "1.8.0"
uuid = { version = "0.7.4", features = ["v4"] }
serde_traitobject = "0.1.3"
